# kodegen-server-http

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  lib.rs.backup  managers.rs  memory.rs  monitor.rs  registration.rs  server.rs  tool_history.rs  usage_tracker.rs
task/: 000-CODE-REVIEW-SUMMARY.md  000-SUMMARY.md  001-hard-coded-manager-shutdown-delay.md  001-rustls-provider-error-suppression.md  002-global-history-init-no-error-handling.md  002-hard-coded-http-shutdown-timeout.md  003-ignored-server-task-errors.md  003-shutdown-timeout-inconsistent-handling.md  004-ignored-manager-shutdown-errors.md  004-manager-shutdown-error-suppression.md  005-ignored-completion-send-errors.md  005-manager-shutdown-no-ordering.md  006-race-condition-shutdown-timing.md  006-shutdown-timing-logic-issue.md  007-hardcoded-shutdown-timeout-mismatch.md  007-managers-shutdown-loses-error-info.md  008-ignored-server-task-errors.md  008-manager-enumeration-not-useful.md  009-no-manager-shutdown-ordering.md  009-no-timeout-manager-shutdown.md  010-hard-coded-sse-keepalive.md  010-resource-handlers-are-stubs.md  011-completion-channel-send-ignored.md  011-env-logger-default-config.md  012-client-info-storage-error-suppressed.md  012-global-history-init-not-idempotent.md  013-misleading-shutdown-comment.md  013-potential-clone-performance-issue.md  014-no-error-context-in-registration-callback.md  014-permissive-cors-security-issue.md  015-localsessionmanager-scalability.md  015-signal-handling-non-deterministic.md  016-server-bind-failure-not-propagated.md  017-instance-id-collision-risk.md
