[package]
name = "kodegen_server_http"
version = "0.10.9"
edition = "2024"
description = "KODEGEN.ᴀɪ: Database query and schema exploration MCP tools for AI agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-server-http"
readme = "README.md"
categories = ["development-tools","api-bindings"]
keywords = [
    "mcp",
    "client",
    "agent",
    "claude"
]

[dependencies]
# Internal dependencies
kodegen_config_manager = { version = "0.10" }
kodegen_mcp_schema = { version = "0.10" }
kodegen_config = { version = "0.10" }

# Cross-platform process memory tracking
sysinfo = "0.37"

# Usage tracking dependencies
parking_lot = "0.12.5"
inventory = "0.3"
dashmap = "6"

# MCP SDK with Streamable HTTP feature (NOT sse-server!)
rmcp = { version = "0.11", features = ["server", "transport-streamable-http-server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP stack
axum = "0.8"
hyper = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "service"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
termcolor = "1"

# TLS
rustls = { version = "0.23", features = ["ring"] }

# Serialization
serde = "1"
serde_json = "1"

# Async utilities for parallel manager shutdown
futures = "0.3"
